[package]
name = "evmap"
version = "11.0.0-alpha.8"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A lock-free, eventually consistent, concurrent multi-value map."
repository = "https://github.com/jonhoo/evmap.git"

keywords = ["map","multi-value","lock-free"]
categories = ["concurrency", "data-structures"]

[features]
default = []
indexed = ["indexmap"]
eviction = ["indexed", "rand"]
amortize = ["indexmap-amortized", "hashbag/amortize"]

[dependencies]
indexmap = { version = "1.6.1", optional = true }
indexmap-amortized = { version = "1.6.1", optional = true }
smallvec = "1.0.0"
hashbag = "0.1.3"
rand = { version = "0.7", default-features = false, features = ["alloc"], optional = true }
left-right = { version = "0.11.0" }

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
