[package]
name = "evmap"
version = "11.0.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "A lock-free, eventually consistent, concurrent multi-value map."
repository = "https://github.com/jonhoo/evmap.git"

keywords = ["map","multi-value","lock-free"]
categories = ["concurrency", "data-structures"]

[features]
default = []
indexed = ["indexmap"]
eviction = ["indexed", "rand"]
amortize = ["indexmap-amortized", "hashbag/amortize"]

[dependencies]
indexmap = { version = "2.12.0", optional = true }
indexmap-amortized = { version = "1.6.1", optional = true }
smallvec = "1.0.0"
hashbag = "0.1.3"
rand = { version = "0.9.2", default-features = false, features = ["alloc"], optional = true }
left-right = { version = "0.11.5" }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
